<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.curfew.About$PlaceholderFragment">

    <TextView
        android:id="@+id/about"
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/mission_statement"
        android:text="@string/mission_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about"
        android:paddingBottom="10sp" />

    <TextView
        android:id="@+id/features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ability"
        android:paddingBottom="10sp"
        android:layout_below="@id/mission_statement" />
    <TextView
        android:id="@+id/not_a_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_below="@id/features"

        />




</RelativeLayout>
